# unified-memory-agent

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  SETUP.md  config.py  debug.txt  demo.ipynb  evaluate.py  evaluate_async.py  generate_stats.py  patch_sglang.py  patch_triton.py  prompt_template.yaml  pyproject.toml  requirements.txt  run_evaluate.sh  run_evaluation.sh  run_evaluation_full.sh  run_generation.sh  run_generation_debug.sh  run_score.sh  test_combined_processor.py  test_setup.sh  test_verl_agent.py  use_gpu.py  utils.py
agents/: __init__.py  adaptive_agent.py  amem_agent.py  base_agent.py  concat_agent.py  emergence_agent.py  gam_agent.py  mem1_agent.py  mem_agent.py  mem_alpha_agent.py  memalpha_agent.py  rag_agent.py  rlm_agent.py  verl_agent.py
agents/file_memory_agent/: __init__.py  activity_processor.py  combined_processor.py  file_memory_agent.py  memory_tools.py  memory_update_processor.py  suggestions_processor.py  theory_of_mind_processor.py
baselines/: run_amem.sh  run_concat.sh  run_gam.sh  run_mem1.sh  run_memagent.sh  run_memagent_woq.sh  run_memalpha.sh  run_rag.sh  run_rlm.sh  run_test.sh
data/: EvalDataset.py  construct_memalpha_verl_dataset.py  construct_processed_verl_dataset.py  construct_verl_dataset.py  split_small_valset.py  synthv1_async.py  validate_synth.py
data/raw/: locomo10.json
data/raw/KnowMeBench/: README_ANALYZER.md  README_CHUNKER.md  analyze_dataset.py  readme.md  semantic_chunker.py
data/raw/KnowMeBench/KnowmeBench/dataset1/question/: Temporal Reasoning_questions.json
data/raw/KnowMeBench/analysis_output/: dataset_analysis_dataset1.json  dataset_analysis_dataset2.json  dataset_analysis_dataset3.json  dataset_comparison.json
data/raw/KnowMeBench/chunked_output/: dataset1_chunks.json  dataset2_chunks.json  dataset3_chunks.json
data/raw/KnowMeBench/evaluate/: evaluate prompt.md  run_eval.py
docs/: AmemAgent_Usage.md  GAMAgent_Guide.md  GAMAgent_Implementation_Summary.md  synthv1_async_flow.md
results/gpt4.1/locomo/: evaluated_memagent_woq.jsonl  responses_concat.jsonl
results/gpt4.1/longmemeval/: evaluated_emergence-sess.jsonl  evaluated_memagent_woq.jsonl  responses_emergence-fixed.jsonl  responses_filememory.jsonl  responses_memagent.jsonl
results/locomo/: evaluated_concat.jsonl  responses_memagent_woq.jsonl  temp_0.jsonl
results/longmemeval/: evaluated_concat.jsonl  evaluated_emergence-fixed.jsonl  evaluated_emergence-turn.jsonl  evaluated_emergence.jsonl  evaluated_filememory.jsonl  responses_concat.jsonl  responses_emergence-sess.jsonl  responses_emergence-turn.jsonl  responses_emergence.jsonl  responses_memagent_woq.jsonl
results/qwen3-4b/banking77/: responses_memalpha.jsonl
results/qwen3-4b/hotpotqa/: evaluated_base.jsonl  evaluated_baseonlyretrieve.jsonl  evaluated_basev1.jsonl  evaluated_basev2.jsonl  evaluated_concat.jsonl  evaluated_drgrpo.jsonl  evaluated_emergence.jsonl  evaluated_grpo1030.jsonl  evaluated_grpo116.jsonl  evaluated_grposimple1030.jsonl  evaluated_gspo1030.jsonl  evaluated_memagent.jsonl  responses_concat.jsonl  responses_emergence.jsonl  responses_memagent.jsonl
results/qwen3-4b/locomo/: evaluated_base.jsonl  evaluated_concat.jsonl  evaluated_drgrpo.jsonl  evaluated_emergence.jsonl  evaluated_grpo1030.jsonl  evaluated_grpo116.jsonl  evaluated_grposimple1030.jsonl  evaluated_gspo1030.jsonl  evaluated_memagent.jsonl  responses_base.jsonl  responses_concat.jsonl  responses_emergence.jsonl  responses_grpo1030.jsonl  responses_grposimple1030.jsonl  responses_gspo1030.jsonl  responses_memagent.jsonl
results/qwen3-4b/longmemeval/: evaluated_base.jsonl  evaluated_concat.jsonl  evaluated_drgrpo.jsonl  evaluated_emergence.jsonl  evaluated_grpo1030.jsonl  evaluated_grpo116.jsonl  evaluated_grposimple1030.jsonl  evaluated_gspo1030.jsonl  evaluated_memagent.jsonl  responses_concat.jsonl  responses_emergence.jsonl  responses_memagent.jsonl
results/qwen3-4b/msc/: evaluated_base.jsonl  evaluated_concat.jsonl  evaluated_emergence.jsonl  evaluated_grpo116.jsonl  evaluated_memagent.jsonl  responses_concat.jsonl  responses_emergence.jsonl  responses_memagent.jsonl
results/qwen3-4b/msc_batch1/: evaluated_concat.jsonl  evaluated_emergence.jsonl  evaluated_memagent.jsonl  responses_concat.jsonl  responses_emergence.jsonl  responses_memagent.jsonl
results/qwen3-8b/locomo/: evaluated_concat.jsonl  responses_concat.jsonl
results/qwen3-8b/longmemeval/: evaluated_concat.jsonl  responses_concat.jsonl
results/qwen3-8b/longmemeval_oracle/: evaluated_concat.jsonl  responses_concat.jsonl
tmp/memory_longmemeval_3fdac837/: user_episodic.md  user_event.md  user_profile.md  user_semantic.md
