[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-memory-agent"
version = "0.1.0"
description = "A comprehensive evaluation framework for memory-based conversational AI agents"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Zhang Kehao", email = "zhangkehao22z@ict.ac.cn"},
]
maintainers = [
    {name = "Zhang Kehao", email = "zhangkehao22z@ict.ac.cn"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "numpy>=1.26",
    "pandas",
    "regex",
    "python-dotenv",
    "nltk",
    "rouge-score",
    "bert-score",
    "sentence-transformers",
    "backoff",
    "prettytable",
    "pydantic",
    "datasets",
    "scipy",
    "uvloop",
    "tqdm",
    "verl",
    "vllm>=0.14.0",
    "json-repair>=0.57.1",
    "gpustat>=1.1.1",
    "rank-bm25>=0.2.2",
    "sglang>=0.5.2",
    "sgl-kernel>=0.3.21",
]

[project.optional-dependencies]
all = [
    "matplotlib",
    "scikit-learn",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "black",
    "isort",
    "flake8",
    "mypy",
    "pre-commit",
]
jupyter = [
    "jupyter",
    "ipywidgets",
]

[project.urls]
"Homepage" = "https://github.com/deadpool66"
"Bug Reports" = "https://github.com/ictnlp/unified-memory-agent/issues"
"Source" = "https://github.com/ictnlp/unified-memory-agent"

[tool.setuptools.packages.find]
include = [
    "agents*",
    "data*",
]
exclude = [
    "external*",
    "tests*",
]

[tool.setuptools.dynamic]
version = {attr = "config.VERSION"}

[tool.uv.sources]
verl = { path = "external/verl", editable = true }

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
